--- a/mnist/prediction.ipynb
+++ b/mnist/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,29 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\eight1.PNG - result: 2\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\four1.PNG - result: 4\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\one1.PNG - result: 1\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\one2.PNG - result: 8\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\six1.PNG - result: 6\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\three1.PNG - result: 3\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\two1.PNG - result: 2\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\two2.PNG - result: 2\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\zero1.PNG - result: 3\n",
-      "picture: C:\\Users\\Tsofan\\Desktop\\ex1\\numbersToTest\\zero2.PNG - result: 0\n"
+      "picture: C:\\Projects\\mnist\\2.png - result: 2\n",
+      "picture: C:\\Projects\\mnist\\22.png - result: 2\n",
+      "picture: C:\\Projects\\mnist\\5.png - result: 3\n",
+      "picture: C:\\Projects\\mnist\\55.png - result: 5\n",
+      "picture: C:\\Projects\\mnist\\6.png - result: 4\n",
+      "picture: C:\\Projects\\mnist\\7.png - result: 3\n",
+      "picture: C:\\Projects\\mnist\\77.png - result: 9\n"
      ]
     }
    ],
    "source": [
-    "#path = \"C:\\\\Users\\\\Tsofan\\\\Desktop\\\\ex1\\\\numbersToTest\"\n",
-    "path = sys.argv[1]\n",
+    "path = \"C:\\\\Projects\\\\mnist\"\n",
+    "#path = sys.argv[1]\n",
     "\n",
     "for file in os.listdir(path):\n",
     "    img_path = path + \"\\\\\" + file\n",
@@ -91,9 +88,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
